tg-analytics -> - в ручке /sessions пагинация изменена на количекство записей, которое необходимо отдать фронту
